fix : the scrollbar ui

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,3 +7,15 @@ input::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 } */
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #edeaea;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #1640d6;
+}
